--- a/pom.xml
+++ b/pom.xml
@@ -49,11 +49,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.10.19</version>
-			<scope>test</scope>
-		</dependency>
+        	<groupId>org.mockito</groupId>
+        	<artifactId>mockito-core</artifactId>
+        	<version>4.2.0</version>
+        <scope>test</scope>
+    </dependency>
 	</dependencies>
 
 	<build>
